Fix: whitespace is now considered null in trial heat data table. Fix: error holder is no longer too wide for portrait mobile.

--- a/sass/src/my-style.scss
+++ b/sass/src/my-style.scss
@@ -28,7 +28,8 @@
 
 
 .errorHolder {
-	width: 30em;
+  width: 100%;
+	max-width: 30em;
 	margin: 0 auto;
   text-align: left;
 
